@@ -47,14 +47,9 @@ import com.sun.jersey.core.header.MediaTypes;
 import com.sun.jersey.server.impl.model.method.ResourceHttpOptionsMethod;
 import com.sun.jersey.server.impl.model.method.ResourceMethod;
 import com.sun.jersey.server.wadl.WadlApplicationContext;
-import com.sun.jersey.server.wadl.WadlBuilder;
-import com.sun.jersey.server.wadl.WadlGenerator;
 import com.sun.research.ws.wadl.Application;
-import com.sun.research.ws.wadl.Resource;
-import com.sun.research.ws.wadl.Resources;
 
 import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriInfo;
 import java.util.List;
 import java.util.Map;
 
